from dataclasses import dataclass


@dataclass
class SomeCreateDto:
    data: str
